Fixed unwanted scrollbar due to viewpoint extending over the page size

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,11 @@
 .plain-text-link {
   color: inherit;
 }
+
+body {
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
